// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Container > applies custom className 1`] = `
<div
  class="w-full max-w-7xl sm:px-6 lg:px-8 p-8 mx-auto items-center custom-class"
>
  Content
</div>
`;

exports[`Container > renders a div with container classes 1`] = `
<div
  class="w-full max-w-7xl sm:px-6 lg:px-8 p-8 mx-auto items-center"
/>
`;

exports[`Container > renders with children 1`] = `
<div
  class="w-full max-w-7xl sm:px-6 lg:px-8 p-8 mx-auto items-center"
>
  Test Content
</div>
`;
